# words

./: .clang-tidy  .clangd  .gitignore  .prettierignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CORPUS-CANDIDATES.md  COVERAGE.md  LICENSE  README.md  default.profraw  deploy  dev  package-lock.json  package.json  presubmit.sh  vcpkg.json
.claude/: settings.json  statusline.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  feedback.yml
.github/workflows/: deploy.yml
assets/fonts/: README.md  capabilities.txt
assets/stopwords/: NOTICE  names
bench/: word_bench.cc
content/: credits.md
docs/: bug-relay-handoff.md
ports/harfbuzz/: portfile.cmake
report-relay/: README.md  smoke.js  vercel.json
report-relay/api/v1/: report.js
src/: box.h  box_test.cc  demo_scene.cc  demo_scene.h  demo_scene_test.cc  gl_util.cc  gl_util.h  hbb.cc  hbb.h  hbb_test.cc  layout.cc  layout.h  layout_test.cc  logging.cc  logging.h  logging_test.cc  main.cc  main.cpp  orientation.cc  orientation.h  orientation_test.cc  palette.cc  palette.h  palette_test.cc  pdf.cc  pdf.h  pdf_test.cc  quad_tree.cc  quad_tree.h  quad_tree_test.cc  scene.cc  scene.h  scene_test.cc  shape.cc  shape.h  shape_renderer.cc  shape_renderer.h  shape_test.cc  svg.cc  svg.h  (+9 more)
tests/: geometry_approval_test.cc  palette_test.cc  test_main.cc  text_approval_test.cc  text_test.cc
tests/corpus/: README.md  adventures-of-huckleberry-finn.tsv  adventures-of-sherlock-holmes.tsv  adventures-of-tom-sawyer.tsv  aeneid.tsv  aesops-fables.tsv  age-of-innocence.tsv  alices-adventures-in-wonderland.tsv  andersens-fairy-tales.tsv  anna-karenina.tsv  anne-of-green-gables.tsv  arabian-nights.tsv  around-the-world-in-eighty-days.tsv  arsene-lupin.tsv  art-of-war.tsv  autobiography-of-benjamin-franklin.tsv  belye-nochi.tsv  beowulf.tsv  black-beauty.tsv  bleak-house.tsv  blue-castle.tsv  brothers-karamazov.tsv  call-of-the-wild.tsv  candide.tsv  canterbury-tales.tsv  chekhov-plays-full.tsv  chekhov-plays.tsv  christmas-carol.tsv  confessions-of-st-augustine.tsv  connecticut-yankee-in-king-arthurs-court.tsv  count-of-monte-cristo.tsv  cranford.tsv  crime-and-punishment.tsv  cyrano-de-bergerac-full.tsv  cyrano-de-bergerac.tsv  david-copperfield.tsv  dead-souls.tsv  die-verwandlung.tsv  divina-commedia.tsv  divine-comedy.tsv  (+161 more)
tests/goldens/geometry/: text_test.word_count_report_for_a_multilingual_corpus.approved.txt
tools/: bench.sh  bot-comment.py  build-info.sh  chrome-version.txt  coverage-md.py  coverage.sh  e2e-golden.sh  e2e-shot.mjs  e2e-ui.mjs  e2e-ui.sh  get-chrome.sh  include-cleaner.sh  make-corpus.py  make-favicon.py  md2html.py  merge-compile-db.py  profile-rebuild.mjs  serve.py  word_counts_main.cc
triplets/: emscripten-chainload.cmake  wasm32-emscripten.cmake
web/: .htaccess  app.js  index.html  worker.js
